# Slim

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  build.bat  installer.py  pyproject.toml  slim.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
filters/: common.py  git_filter.py  npm_filter.py
hooks/: README.md
tests/: test_filters.py  test_hook_and_installer.py
