[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "slim-shady"
version = "0.1.4"
description = "Shrink AI-agent command output to save tokens (git + npm, Windows)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "SRUJAN-cpu", email = "srujansmurty@gmail.com" }]
keywords = ["llm", "tokens", "cli", "ai", "git", "npm", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

# Real token counting via a local tokenizer. (The .exe build bundles this so the
# binary works offline; chars/4 stays only as a crash-safety fallback.)
dependencies = ["tiktoken>=0.7"]

[project.urls]
Homepage = "https://github.com/SRUJAN-cpu/slim-shady"
Repository = "https://github.com/SRUJAN-cpu/slim-shady"
Issues = "https://github.com/SRUJAN-cpu/slim-shady/issues"

[project.scripts]
# Installs a real `slim` command that calls slim.cli().
slim = "slim:cli"

[tool.setuptools]
# Flat layout: top-level modules `slim.py` + `installer.py`, plus `filters`.
py-modules = ["slim", "installer"]
packages = ["filters"]
